--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -61,7 +61,7 @@
               class="btn-success"
               (click)="confirmModal(consulta)"
             >
-              Iniciar Consulta
+              iniciar consulta
             </button>
           </td>
         </tr>
