chore(paciente): implementando home para perfil Paciente

--- a/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
@@ -100,7 +100,7 @@
     </button>
     <button mat-stroked-button class="btn btn-success ms-3" (click)="confirmAgendamento(2)" [disabled]="loading">
       <i class="feather icon-check"></i>
-      confirmar Agendamento
+      confirmar agendamento
     </button>
   </div>
 </div>
