--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -49,6 +49,7 @@
   --f_12: 12px;
   --f_14: 14px;
   --f_16: 16px;
+  --f_18: 18px;
   --f_25: 25px;
   --tcc-bg-success-progress: #2ed8b6;
   --tcc-bg-info-progress: #70a6e8;
