chore: finalizando Home do Paciente e ajustes

--- a/src/app/@modules/home/components/paciente/minhas-consultas/minhas-consultas.component.html
+++ b/src/app/@modules/home/components/paciente/minhas-consultas/minhas-consultas.component.html
@@ -10,7 +10,15 @@
       <span class="description-eye">Visualizar minhas consultas</span>
     </div>
     <div class="col-12 text-center">
-      <button type="button" mat-raised-button color="primary" class="btn btn-primary">Visualizar</button>
+      <button
+        type="button"
+        mat-raised-button
+        color="primary"
+        class="btn btn-primary"
+        (click)="redirectMinhasConsultas()"
+      >
+        Visualizar
+      </button>
     </div>
   </div>
 </app-card-content>
