--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -34,6 +34,9 @@
             </div>
           </div>
         </div>
+        <div class="col-12 my-3">
+          <app-tabela-medicamentos></app-tabela-medicamentos>
+        </div>
       </div>
     </div>
   </ng-container>
