--- a/src/app/@modules/protuario-medico/protuario-medico.component.html
+++ b/src/app/@modules/protuario-medico/protuario-medico.component.html
@@ -4,7 +4,6 @@
       <app-card-content>
         <div class="row">
           <div class="col-12 d-flex justify-content-between pe-0">
-            <h2 class="m-0">Busca</h2>
             <!-- <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button> -->
           </div>
           <div class="col-md-5 col-sm-12">
@@ -14,7 +13,10 @@
             </mat-form-field>
           </div>
           <div class="col-md-auto p-md-0 align-button col-sm-12 mt-2">
-            <button class="btn btn-warning me-3" type="button">Buscar</button>
+            <button class="btn btn-warning me-3" type="button">
+              <i class="feather icon-search"></i>
+              Buscar
+            </button>
           </div>
         </div>
       </app-card-content>
