--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -52,7 +52,7 @@
                 >
               </div>
               <div class="col-6 d-flex justify-content-end pe-0">
-                <a class="reset-password">Esqueceu sua senha?</a>
+                <!-- <a class="reset-password">Esqueceu sua senha?</a> -->
               </div>
             </div>
             <br />
