--- a/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
+++ b/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
@@ -2,36 +2,46 @@
   <div class="container">
     <div class="row">
       <div class="col-12 name-medico mt-4">
-        <h3 class="m-0">Nome do Paciente</h3>
+        <h3 class="m-0">{{ dadosUser?.paciente?.nome }}</h3>
         <span>Paciente</span>
       </div>
       <div class="col-auto pb-3 description">
         <span>Altura</span>
-        <h4 class="m-0">1.70</h4>
+        <h4 class="m-0">{{ dadosMedicos?.altura ? dadosMedicos?.altura : '--' }}</h4>
       </div>
       <div class="col-auto pb-3 description">
         <span>Peso</span>
-        <h4 class="m-0">84.0</h4>
+        <h4 class="m-0">{{ dadosMedicos?.peso ? dadosMedicos?.peso : '--' }}</h4>
       </div>
       <div class="col-auto pb-3 description">
         <span>Tipo sanguíneo</span>
-        <h4 class="m-0">sem registro</h4>
+        <h4 class="m-0">
+          {{
+            dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
+              ? dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
+              : '--'
+          }}
+        </h4>
       </div>
     </div>
     <div class="row">
       <div class="col-auto pb-3 description">
         <span>IMC</span>
-        <h4 class="m-0">1.74</h4>
+        <h4 class="m-0">{{ dadosMedicos?.vlImc ? dadosMedicos?.vlImc : '--' }}</h4>
       </div>
       <div class="col-auto pb-3 description">
         <span>Descrição IMC</span>
-        <h4 class="m-0">Obesidade</h4>
+        <h4 class="m-0">{{ dadosMedicos?.descImc ? dadosMedicos?.descImc : '--' }}</h4>
       </div>
     </div>
     <div class="row">
-      <div class="col-auto pb-3 description">
+      <!-- <div class="col-auto pb-3 description">
         <span>Última consulta</span>
-        <h4 class="m-0">01/01/0101</h4>
+        <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
+      </div> -->
+      <div class="col-auto pb-3 description">
+        <span>Última atualização</span>
+        <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
       </div>
     </div>
   </div>
