--- a/src/app/@modules/perfil/components/update-dados-medicos/update-dados-medicos.component.html
+++ b/src/app/@modules/perfil/components/update-dados-medicos/update-dados-medicos.component.html
@@ -50,7 +50,7 @@
           </ul>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12 d-flex justify-content-between align-items-center mb-3">
           <h3 class="m-0">Detalhes</h3>
         </div>
@@ -63,8 +63,7 @@
                   <strong>Alergias</strong>
                 </mat-panel-title>
                 <mat-panel-description>
-                  <!-- Type your name and age
-                  <mat-icon>account_circle</mat-icon> -->
+
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <ul *ngIf="alergias.length > 0; else semregistro">
@@ -83,8 +82,6 @@
                   <strong>Medicamentos</strong>
                 </mat-panel-title>
                 <mat-panel-description>
-                  <!-- Descrição das suas aler -->
-                  <!-- <mat-icon>map</mat-icon> -->
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <ul *ngIf="medicamentos.length > 0; else semregistro">
@@ -104,8 +101,6 @@
                   <strong>Doenças crônicas</strong>
                 </mat-panel-title>
                 <mat-panel-description>
-                  <!-- Inform the date you wish to travel
-                  <mat-icon>date_range</mat-icon> -->
                 </mat-panel-description>
               </mat-expansion-panel-header>
               <ul *ngIf="doencasCronicas.length > 0; else semregistro">
@@ -120,7 +115,7 @@
             </mat-expansion-panel>
           </mat-accordion>
         </div>
-      </div>
+      </div> -->
     </app-card-content>
   </div>
   <div class="col-12 col-md-4" style="height: 300px">
@@ -141,7 +136,7 @@
           <div class="col-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Tipo Sanguineo</mat-label>
-              <mat-select formControlName="tipoSanguineo" required>
+              <mat-select formControlName="tipoSanguineo">
                 <mat-option [value]="tipo.id" *ngFor="let tipo of tiposSanguineo"
                   >{{ tipo?.descricaoTipoSanguineo }}
                 </mat-option>
