--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -47,21 +47,22 @@
               *ngIf="perfil === 'PACIENTE'"
             >
               <i class="feather icon-list pe-2"></i>
-              <span>Meus Prontuários</span>
+              <span>Prontuários</span>
             </a>
           </ng-container>
 
-          <ng-container *ngIf="perfil === 'ADMINISTRADOR' || perfil === 'AUXILIAR'">
+          <ng-container *ngIf="perfil === 'ADMINISTRADOR' || perfil === 'AUXILIAR' || perfil === 'PACIENTE'">
             <a mat-list-item routerLink="/consultas" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-              <i class="feather icon-file-text pe-3"></i>
-              <span>Consultas</span>
+              <i class="feather icon-file-text pe-2"></i>
+              <span *ngIf="perfil === 'ADMINISTRADOR' || perfil === 'AUXILIAR'">Consultas</span>
+              <span *ngIf="perfil === 'PACIENTE'">Consultas</span>
             </a>
           </ng-container>
 
           <ng-container *ngIf="perfil === 'ADMINISTRADOR' || perfil === 'AUXILIAR' || perfil === 'MEDICO'">
             <a mat-list-item routerLink="/pacientes" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-              <i class="feather icon-users pe-3"></i>
-              <span>Pacientes</span>
+              <i class="feather icon-file pe-3"></i>
+              <span>Consultas</span>
             </a>
           </ng-container>
 
