--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
@@ -74,12 +74,45 @@
       </div>
     </div>
     <!-- Cadastro da Consulta -->
-    <div class="row mt-4">
-      <!-- <div class="col-12">
-        <h1 class="text-center">Dados da Consulta</h1>
-      </div> -->
-      <div class="col-12">
-        <form [formGroup]="formProntuario">
+    <form [formGroup]="formProntuario">
+      <div class="row mt-4">
+        <div class="col-12">
+          <h3 class="mb-0">Dados da Consulta</h3>
+          <hr class="mt-1 mb-2" />
+        </div>
+        <div class="col-md-12">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Descrição geral da consulta</mat-label>
+            <textarea
+              formControlName="descConsulta"
+              matInput
+              placeholder="Descrição geral da consulta"
+              autocomplete="off"
+              rows="5"
+            ></textarea>
+            <mat-error>
+              <app-error-control-message [control]="formProntuario.controls.descConsulta" label="Descrição">
+              </app-error-control-message>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-md-12 mb-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Sumário médico</mat-label>
+            <textarea
+              formControlName="descSumario"
+              matInput
+              placeholder="Digite os sintomas do paciente aqui..."
+              autocomplete="off"
+              rows="5"
+            ></textarea>
+            <mat-error>
+              <app-error-control-message [control]="formProntuario.controls.descSumario" label="Sumário">
+              </app-error-control-message>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-12">
           <mat-accordion class="detail-consulta">
             <!-- Alergias -->
             <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
@@ -292,9 +325,10 @@
               </mat-action-row>
             </mat-expansion-panel>
           </mat-accordion>
-        </form>
+        </div>
       </div>
-    </div>
+      <!-- /row -->
+    </form>
     <app-form-debug [form]="formProntuario"></app-form-debug>
   </app-card-content>
 </div>
