--- a/src/app/@modules/especialidades/components/form-cadastro-especialidade/form-cadastro-especialidade.component.html
+++ b/src/app/@modules/especialidades/components/form-cadastro-especialidade/form-cadastro-especialidade.component.html
@@ -1,7 +1,4 @@
 <div class="animate__fadeInUp2">
-  <div class="col-12 d-flex justify-content-end">
-    <i class="feather icon-x-circle" (click)="closeDialog()"></i>
-  </div>
   <div class="row mb-3">
     <div class="col-md-12">
       <h3 class="mt-3 mb-0">Especialidade</h3>
@@ -37,10 +34,16 @@
   </form>
   <div class="row d-flex justify-content-end ms-1 mt-4">
     <div class="col-2 p-0">
-      <button type="button" class="btn btn-secondary-tcc p-2">limpar</button>
+      <button type="button" class="btn btn-secondary-tcc p-2">
+        <i class="feather icon-x"></i>
+        limpar
+      </button>
     </div>
     <div class="col-2 p-0">
-      <button type="submit" class="btn btn-primary-tcc p-2">salvar</button>
+      <button type="submit" class="btn btn-primary-tcc p-2">
+        <i class="feather icon-check"></i>
+        salvar
+      </button>
     </div>
   </div>
 </div>
