chore: ajustes e adicionando novos campos no Prontuário Médico

--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.scss
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.scss
@@ -54,3 +54,12 @@ ul {
     transition: 300ms;
   }
 }
+
+/* NG FILE - FORMART */
+.files-row {
+  .file-list {
+    h6 {
+      font-size: 16px;
+    }
+  }
+}
