--- a/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
+++ b/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
@@ -57,13 +57,19 @@
             </mat-form-field>
           </div>
           <div class="col-12 d-flex justify-content-end">
-            <button type="button" class="btn btn-secondary me-3" (click)="clearForm()">limpar</button>
+            <button type="button" class="btn btn-secondary me-3" (click)="clearForm()">
+              <i class="feather icon-x"></i>
+              limpar
+            </button>
             <button type="submit" class="btn btn-primary" [disabled]="loading" (click)="submitNewPassword()">
               <ng-container *ngIf="loading">
                 <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                 <span class="sr-only">Aguarde...</span>
               </ng-container>
-              <span *ngIf="!loading">salvar</span>
+              <span *ngIf="!loading">
+                <i class="feather icon-check"></i>
+                salvar
+              </span>
             </button>
           </div>
         </div>
