--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
@@ -326,6 +326,28 @@
             </mat-expansion-panel>
           </mat-accordion>
         </div>
+        <div class="col-12">
+          <file-upload [animation]="animationFile" [control]="files" class="mt-3">
+            <ng-template let-isFileDragDropAvailable="isFileDragDropAvailable" #placeholder>
+              <span *ngIf="isFileDragDropAvailable">Arraste ou Clique aqui</span>
+            </ng-template>
+
+            <ng-template let-i="index" let-file="file" let-control="control" #item>
+              <div class="file-info">
+                <span class="file-name">{{ file.name }}</span>
+                <button mat-button type="button" (click)="files.removeFile(file)">
+                  <i class="feather icon-x"></i>
+                </button>
+              </div>
+            </ng-template>
+          </file-upload>
+        </div>
+        <div class="col-12 mt-4 d-flex justify-content-end">
+          <button class="btn btn-primary">
+            <i class="feather icon-check"></i>
+            salvar prontuário
+          </button>
+        </div>
       </div>
       <!-- /row -->
     </form>
