--- a/src/app/@modules/perfil/components/tab-perfil/tab-perfil.component.html
+++ b/src/app/@modules/perfil/components/tab-perfil/tab-perfil.component.html
@@ -18,7 +18,10 @@
           <span>{{ dadosUser?.nome }}</span>
         </div>
         <div class="col-12 d-flex justify-content-center mt-2">
-          <button class="btn btn-primary">Atualizar foto</button>
+          <button class="btn btn-primary">
+            <i class="feather icon-refresh-cw"></i>
+            Atualizar foto
+          </button>
         </div>
       </div>
     </app-card-content>
