--- a/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
+++ b/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
@@ -139,13 +139,15 @@
           </div>
         </ng-container>
         <div class="col-12 d-flex justify-content-end">
-          <button type="button" class="btn btn-secondary me-3">limpar</button>
           <button type="button" class="btn btn-primary" (click)="updateClinica()" [disabled]="loading">
             <ng-container *ngIf="loading">
               <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
               <span class="sr-only">Aguarde...</span>
             </ng-container>
-            <span *ngIf="!loading">salvar</span>
+            <span *ngIf="!loading">
+              <i class="feather icon-check"></i>
+              salvar
+            </span>
           </button>
         </div>
       </div>
@@ -163,11 +165,40 @@
   </form>
 </ng-container>
 <ng-container *ngIf="type === 3">
-  <form>
+  <form [formGroup]="form">
     <div class="row">
       <div class="col-12">
         <h3 class="m-0">Missão, Valores e Visão</h3>
         <hr class="my-2" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput placeholder="Missão" autocomplete="off" formControlName="missao"></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-md-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput placeholder="Valores" autocomplete="off" formControlName="valores"></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-md-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput placeholder="Visão" autocomplete="off" formControlName="visao"></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-12 d-flex justify-content-end">
+        <button type="button" class="btn btn-primary" (click)="updateClinica()" [disabled]="loading">
+          <ng-container *ngIf="loading">
+            <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">Aguarde...</span>
+          </ng-container>
+          <span *ngIf="!loading">
+            <i class="feather icon-check"></i>
+            salvar
+          </span>
+        </button>
       </div>
     </div>
   </form>
