--- a/src/app/@modules/configuracoes/configuracoes.component.html
+++ b/src/app/@modules/configuracoes/configuracoes.component.html
@@ -23,16 +23,20 @@
             <ul class="detalhes">
               <li>
                 <i class="feather icon-map-pin"></i>
-                <span>Endereço</span>
+                <span
+                  >{{ dadosClinica?.endereco?.noCidade }}, {{ dadosClinica?.endereco?.descRua }},
+                  {{ dadosClinica?.endereco?.descBairro }}, {{ dadosClinica?.endereco?.noCidade }},
+                  {{ dadosClinica?.endereco?.noEstado }}</span
+                >
               </li>
-              <li>
+              <!-- <li>
                 <i class="feather icon-phone"></i>
                 <span>(00) 0 0000-0000 - (00) 000-0000</span>
               </li>
               <li class="email">
                 <i class="feather icon-mail email"></i>
                 <span class="m-0 d-inline">email@gmail.com</span>
-              </li>
+              </li> -->
               <li>
                 <i class="feather icon-clock"></i>
                 <span class="m-0 d-inline">{{ dadosClinica?.dtAbertura }} - {{ dadosClinica?.dtEncerramento }}</span>
@@ -42,7 +46,7 @@
         </div>
       </app-card-content>
     </div>
-    <div class="col-8">
+    <!-- <div class="col-8">
       <app-card-content isHeader="true" cardClass="configuracoes">
         <div class="card-header">
           <div class="row">
@@ -64,8 +68,8 @@
           </div>
         </div>
       </app-card-content>
-    </div>
-    <div class="col-12 mt-4">
+    </div> -->
+    <div class="col-8">
       <app-card-content isHeader="true">
         <div class="card-header">
           <div class="row">
@@ -80,23 +84,17 @@
         <mat-tab-group mat-align-tabs="center">
           <mat-tab label="Missão">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              {{ dadosClinica?.descMissao ? dadosClinica?.descMissao : 'Sem registro.' }}
             </p>
           </mat-tab>
           <mat-tab label="Valores">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              {{ dadosClinica?.descValores ? dadosClinica?.descValores : 'Sem registro.' }}
             </p>
           </mat-tab>
           <mat-tab label="Visão">
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled it to make a type specimen book.
+              {{ dadosClinica?.Visao ? dadosClinica?.Visao : 'Sem registro.' }}
             </p>
           </mat-tab>
         </mat-tab-group>
@@ -115,6 +113,7 @@
           [type]="type"
           [dados]="dadosClinica"
           (closeModal)="closeModal($event)"
+          (reload)="getDadosClinica($event)"
         ></app-form-dados-clinica>
       </div>
     </div>
