--- a/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
+++ b/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
@@ -44,7 +44,6 @@
     <table class="w-100 table-tcc" *ngIf="consultas.length > 0; else semregistro">
       <thead class="text-uppercase">
         <tr>
-          <th scope="col">Paciente</th>
           <th scope="col">Médico</th>
           <th scope="col">Procedimento</th>
           <th scope="col">Data</th>
@@ -65,17 +64,20 @@
             index as i
           "
         >
-          <td class="d-flex align-items-center">
-            <div class="d-inline-block name-profile">
-              <span class="d-block name">{{ consulta?.paciente?.nome }}</span>
-              <span class="profile">{{ consulta?.paciente?.cpf | mask: '000.000.000-00' }}</span>
-            </div>
-          </td>
           <td class="td-format">{{ consulta?.medico?.nome }}</td>
           <td class="td-format">{{ consulta?.procedimento?.descTipoProcedimento }}</td>
           <td class="td-format">{{ consulta?.dtInicio | date: 'shortDate' }}</td>
           <td class="td-format">
-            <span class="badge bg-primary">Pendente</span>
+            <span
+              class="badge"
+              [ngClass]="{
+                'bg-primary': consulta?.status === 'Pendente',
+                'bg-success': consulta?.status === 'Confirmada',
+                'bg-danger': consulta?.status === 'Cancelada',
+                'bg-secondary': consulta?.status === 'Finalizada'
+              }"
+              >{{ consulta?.status }}</span
+            >
           </td>
           <td class="text-center">
             <button
@@ -93,15 +95,22 @@
               type="button"
               class="btn-success"
               (click)="submit('confirm', consulta)"
+              [disabled]="
+                consulta?.status === 'Confirmada' ||
+                consulta?.status === 'Finalizada' ||
+                consulta?.status === 'Cancelada'
+              "
             >
               <i class="feather icon-check"></i> confirmar
             </button>
+
             <button
               mat-raised-button
               color="primary"
               type="button"
               class="btn-danger"
-              (click)="submit('cancel', consulta)"
+              (click)="confirmCancel(consulta)"
+              [disabled]="consulta?.status === 'Cancelada' || consulta?.status === 'Finalizada'"
             >
               <i class="feather icon-x"></i> cancelar
             </button>
