chore: integrando com end-point de PEP e ajustes

--- a/src/app/@modules/consultas/lista-medico/lista-medico.component.html
+++ b/src/app/@modules/consultas/lista-medico/lista-medico.component.html
@@ -70,7 +70,16 @@
           <td class="td-format">{{ consulta?.procedimento?.descTipoProcedimento }}</td>
           <td class="td-format">{{ consulta?.dtInicio | date: 'shortDate' }}</td>
           <td class="td-format">
-            <span class="badge bg-primary">Pendente</span>
+            <span
+              class="badge bg-secondary2"
+              [ngClass]="{
+                'bg-primary': consulta?.status === 'Pendente',
+                'bg-success': consulta?.status === 'Confirmada',
+                'bg-danger': consulta?.status === 'Cancelada',
+                'bg-secondary': consulta?.status === 'Finalizada'
+              }"
+              >{{ consulta?.status }}</span
+            >
           </td>
           <td class="text-center">
             <button
