--- a/src/app/@modules/home/components/paciente/nova-consulta-paciente/nova-consulta-paciente.component.html
+++ b/src/app/@modules/home/components/paciente/nova-consulta-paciente/nova-consulta-paciente.component.html
@@ -83,7 +83,7 @@
                 </ng-container>
               </button>
             </div>
-            <ng-container *ngIf="horariosDisponiveis">
+            <ng-container *ngIf="horariosDisponiveis.length > 0">
               <div class="col-md-8">
                 <mat-form-field appearance="outline" class="w-100">
                   <mat-label>Horários disponíveis</mat-label>
