--- a/src/theme/_general.scss
+++ b/src/theme/_general.scss
@@ -2358,6 +2358,10 @@ progress {
   background-color: var(--tcc-secondary) !important;
 }
 
+.bg-secondary2 {
+  background-color: var(--tcc-secondary) !important;
+}
+
 .bg-success {
   background-color: var(--tcc-success) !important;
 }
