--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.scss
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.scss
@@ -63,3 +63,22 @@ ul {
     }
   }
 }
+
+.img-icon-height {
+  img {
+    height: auto !important;
+    cursor: pointer;
+
+    &:hover {
+      transition: 300ms;
+      opacity: 0.7;
+    }
+  }
+}
+
+::ng-deep {
+  .mat-menu-panel {
+    width: auto !important;
+    min-height: 40px !important;
+  }
+}
