--- a/src/app/@modules/perfil/components/form-update-paciente/form-update-paciente.component.html
+++ b/src/app/@modules/perfil/components/form-update-paciente/form-update-paciente.component.html
@@ -75,13 +75,19 @@
                 >
               </div>
               <div class="col-12 d-flex justify-content-end">
-                <button type="button" class="btn btn-secondary me-3">limpar</button>
+                <button type="button" class="btn btn-secondary me-3" (click)="clearFormConvenio()">
+                  <i class="feather icon-x"></i>
+                  limpar
+                </button>
                 <button type="button" class="btn btn-primary" [disabled]="loading" (click)="updatePaciente()">
                   <ng-container *ngIf="loading">
                     <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                     <span class="sr-only">Aguarde...</span>
                   </ng-container>
-                  <span *ngIf="!loading">salvar</span>
+                  <span *ngIf="!loading">
+                    <i class="feather icon-check"></i>
+                    salvar
+                  </span>
                 </button>
               </div>
             </div>
